--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@universal-packages/adapter-resolver": "^1.2.0",
     "@universal-packages/crypto-utils": "^1.1.1",
     "@universal-packages/fs-utils": "^1.0.1",
-    "@universal-packages/time-measurer": "^1.4.0"
+    "@universal-packages/time-measurer": "^1.4.0",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "@types/jest": "^28.1.0",
