--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest --watch",
     "test:full": "jest --coverage --verbose",
     "test:clear": "jest --clearCache",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\""
+    "format": "prettier --write \"./{src,tests}/**/*.{ts,tsx,js,jsx,json}\""
   },
   "dependencies": {
     "@universal-packages/adapter-resolver": "^1.2.0",
@@ -22,6 +22,7 @@
     "sharp": "^0.32.1"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/jest": "^28.1.0",
     "@types/node": "^17.0.39",
     "jest": "^28.1.0",
@@ -50,6 +51,17 @@
     "semi": false,
     "singleQuote": true,
     "printWidth": 180,
-    "trailingComma": "none"
+    "trailingComma": "none",
+    "importOrder": [
+      "^[./]"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true,
+    "importOrderParserPlugins": [
+      "typescript",
+      "jsx",
+      "classProperties",
+      "decorators-legacy"
+    ]
   }
 }
