--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@universal-packages/adapter-resolver": "^1.3.1",
     "@universal-packages/crypto-utils": "^1.1.1",
+    "@universal-packages/event-emitter": "^1.1.2",
     "@universal-packages/fs-utils": "^1.0.1",
     "@universal-packages/time-measurer": "^1.4.9",
     "sharp": "^0.32.6"
